# geodesic-interpolation-cv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_cv.ipynb
geodesic_cv/: interpolate.py  parse.py  pointcloud.py
scripts/: compute_pmf.py  interpolate.py
simulations/enhanced/plumed_files/: Reg_geo_filter.pt  Reg_geo_nofilter.pt  TDA.pt  TDA_geo_filter.pt  TDA_geo_nofilter.pt
simulations/enhanced/tpr_files/: nvt_0.tpr  nvt_1.tpr  nvt_2.tpr  nvt_3.tpr  nvt_4.tpr
simulations/unbiased/folded/: nvt.tpr
simulations/unbiased/unfolded/: nvt.tpr
