[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geodesic_cv"
authors = [
    { name = "Soojung Yang", email = "soojungy@mit.edu" },
    { name = "Juno Nam", email = "junonam@mit.edu" },
    { name = "Johannes C. B. Dietschreit", email = "jdiet@mit.edu" }
]
description = "Geodesic interpolation for collective variables"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.setuptools]
packages = ["geodesic_cv"]
